chore: pull translations from crowdin

--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -28,18 +28,19 @@
   "viewMenuToggleFullScreen": "フルスクリーンを切り替える",
   "viewMenuToggleDevTools": "開発者ツールを切り替える",
   "contextMenuNoSuggestions": "候補はありません",
-  "openGroupInvitation": "公開グループからの招待",
+  "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$に参加しますか？",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$の公開グループに参加しますか？",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
+  "couldntFindServerMatching": "対応する公開グループのサーバが見つかりませんでした",
   "enterSessionIDOrONSName": "Session ID か ONS 名を入力してください",
+  "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "読込中...",
   "done": "完了",
   "youLeftTheGroup": "グループを抜けました",
   "youGotKickedFromGroup": "あなたはこのグループから削除されました",
   "unreadMessages": "未読",
   "debugLogExplanation": "このログはデスクトップに保存されます。",
-  "reportIssue": "問題を報告",
+  "reportIssue": "Report a Bug",
   "markAllAsRead": "すべて既読にする",
   "incomingError": "受信中にエラー",
   "media": "メディア",
@@ -61,7 +62,8 @@
   "unableToLoadAttachment": "添付中にエラーが発生しました。",
   "offline": "オフライン",
   "debugLog": "デバッグログ",
-  "showDebugLog": "デバッグログを表示",
+  "showDebugLog": "Export Logs",
+  "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "goToReleaseNotes": "リリースノートを閲覧",
   "goToSupportPage": "サポートページへ",
   "about": "Sessionについて",
@@ -98,7 +100,7 @@
   "deleteMessagesQuestion": "$count$個のメッセージを削除しますか？",
   "deleteMessageQuestion": "このメッセージを削除しますか？",
   "deleteMessages": "メッセージを削除",
-  "deleted": "$count$ deleted",
+  "deleted": "$count$ が削除されました",
   "messageDeletedPlaceholder": "このメッセージは削除されました",
   "from": "差出人:",
   "to": "宛先:",
@@ -109,8 +111,9 @@
   "moreInformation": "詳細",
   "resend": "再送",
   "deleteConversationConfirmation": "この会話を完全に消去しますが，よろしいですか？",
+  "clear": "Clear",
   "clearAllData": "すべてのデータを消去する",
-  "deleteAccountWarning": "メッセージと連絡先が完全に削除されます",
+  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
   "deleteContactConfirmation": "この会話を削除してもよろしいですか？",
   "quoteThumbnailAlt": "引用されたメッセージから画像のサムネール",
   "imageAttachmentAlt": "メッセージにイメージを添付する",
@@ -126,31 +129,44 @@
   "tookAScreenshot": "$name$はスクリーンショットを撮りました。",
   "savedTheFile": "$name$ でメディアを保存しました",
   "linkPreviewsTitle": "リンクプレビューを送る",
-  "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
+  "linkPreviewDescription": "Show link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "リンクのプレビューを送信するとき、完全なメタデータ保護はありません。",
   "mediaPermissionsTitle": "マイク",
-  "mediaPermissionsDescription": "マイクへのアクセスを許可する",
+  "mediaPermissionsDescription": "Allow access to microphone.",
   "spellCheckTitle": "スペルチェック",
-  "spellCheckDescription": "メッセージボックスに入力されたテキストのスペルチェックを有効にする",
+  "spellCheckDescription": "Enable spell check when typing messages.",
   "spellCheckDirty": "新しい設定を適用するために Session を再起動する必要があります",
-  "readReceiptSettingDescription": "メッセージが読まれた状態の表示と送信をする（すべてのセッションに既読通知を有功にする）。",
+  "readReceiptSettingDescription": "Send read receipts in one-to-one chats.",
   "readReceiptSettingTitle": "既読通知",
-  "typingIndicatorsSettingDescription": "メッセージが入力中である状態の表示と送信をする（すべてのセッションに適用される）。",
+  "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
   "typingIndicatorsSettingTitle": "入力中アイコン",
   "zoomFactorSettingTitle": "ズーム",
-  "pruneSettingTitle": "Prune Old Open Group Messages",
-  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
-  "pruningOpengroupDialogTitle": "Open group pruning",
-  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
-  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
-  "enable": "Enable",
-  "keepDisabled": "Keep disabled",
-  "notificationSettingsDialog": "新着メッセージの通知で表示する項目：",
-  "disableNotifications": "通知を無効にする",
+  "themesSettingTitle": "Themes",
+  "primaryColor": "Primary Color",
+  "primaryColorGreen": "Primary color green",
+  "primaryColorBlue": "Primary color blue",
+  "primaryColorYellow": "Primary color yellow",
+  "primaryColorPink": "Primary color pink",
+  "primaryColorPurple": "Primary color purple",
+  "primaryColorOrange": "Primary color  orange",
+  "primaryColorRed": "Primary color red",
+  "classicDarkThemeTitle": "Classic Dark",
+  "classicLightThemeTitle": "Classic Light",
+  "oceanDarkThemeTitle": "Ocean Dark",
+  "oceanLightThemeTitle": "Ocean Light",
+  "pruneSettingTitle": "Trim Communities",
+  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "enable": "有効にする",
+  "keepDisabled": "無効のままにする",
+  "notificationSettingsDialog": "The information shown in notifications.",
   "nameAndMessage": "差出人名とメッセージ",
   "noNameOrMessage": "なし",
   "nameOnly": "差出人名のみ",
   "newMessage": "新着メッセージ",
+  "createConversationNewContact": "Create a conversation with a new contact",
+  "createConversationNewGroup": "Create a group with existing contacts",
+  "joinACommunity": "Join a community",
+  "chooseAnAction": "Choose an action to start a conversation",
   "newMessages": "新着メッセージ",
   "notificationMostRecentFrom": "最新の受信: $name$",
   "notificationFrom": "差出人:",
@@ -158,6 +174,7 @@
   "sendFailed": "送信失敗",
   "mediaMessage": "メディアでのメッセージ",
   "messageBodyMissing": "メッセージを入力してください",
+  "messageBody": "Message body",
   "unblockToSend": "この連絡先にメッセージを送るためにブロックを解除する。",
   "unblockGroupToSend": "このグループにメッセージを送信するには、ブロックを解除してください。",
   "youChangedTheTimer": "消えるメッセージの消去時間を$time$に設定しました",
@@ -198,12 +215,12 @@
   "timerSetTo": "消えるメッセージの消去時間が$time$に設定されました",
   "noteToSelf": "自分用メモ",
   "hideMenuBarTitle": "メニューバーを隠す",
-  "hideMenuBarDescription": "メニューバーの表示を切り替える",
+  "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "不正な番号です",
   "failedResolveOns": "ONS名の解決に失敗しました",
   "autoUpdateSettingTitle": "自動更新",
-  "autoUpdateSettingDescription": "起動時に自動的に更新の有無を確認する",
+  "autoUpdateSettingDescription": "Automatically check for updates on startup.",
   "autoUpdateNewVersionTitle": "Sessionの新しい更新があります",
   "autoUpdateNewVersionMessage": "新しく生まれ変わったSessionがあります",
   "autoUpdateNewVersionInstructions": "更新を適用するにはSessionを再起動してください。",
@@ -224,7 +241,8 @@
   "unblockUser": "ブロック解除",
   "unblocked": "ブロック解除",
   "blocked": "ブロック済み",
-  "blockedSettingsTitle": "ブロックした連絡先",
+  "blockedSettingsTitle": "Blocked Contacts",
+  "conversationsSettingsTitle": "Conversations",
   "unbanUser": "ユーザーの禁止解除",
   "userUnbanned": "ユーザーの禁止解除に成功しました",
   "userUnbanFailed": "禁止解除に失敗しました！",
@@ -233,14 +251,14 @@
   "userBanned": "User banned successfully",
   "userBanFailed": "禁止に失敗しました！",
   "leaveGroup": "グループを抜ける",
-  "leaveAndRemoveForEveryone": "グループから脱退し、全員を削除",
+  "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
   "leaveGroupConfirmation": "このグループを退会しますか？",
   "leaveGroupConfirmationAdmin": "あなたがこのグループの管理者であるため、退会すると現在のすべてのメンバーが削除されます。 本当にこのグループから脱退しますか？",
   "cannotRemoveCreatorFromGroup": "このユーザーを削除できません",
   "cannotRemoveCreatorFromGroupDesc": "グループの作成者であるため、このユーザーを削除できません。",
   "noContactsForGroup": "まだ連絡先がありません",
-  "failedToAddAsModerator": "ユーザーをモデレータとして追加できませんでした",
-  "failedToRemoveFromModerator": "モデレータリストからユーザーを削除できませんでした",
+  "failedToAddAsModerator": "Failed to add user as admin",
+  "failedToRemoveFromModerator": "Failed to remove user from the admin list",
   "copyMessage": "メッセージをコピー",
   "selectMessage": "メッセージを選択",
   "editGroup": "グループを編集する",
@@ -249,25 +267,27 @@
   "showRecoveryPhrase": "リカバリーフレーズ",
   "yourSessionID": "あなたの Session ID",
   "setAccountPasswordTitle": "アカウントのパスワード設定",
-  "setAccountPasswordDescription": "Session のスクリーンのロック解除にパスワードを要求する。スクリーンロック中にもメッセージの通知が受信できます。Session の通知設定でメッセージの通知に表示される情報を調整できます。",
+  "setAccountPasswordDescription": "Require password to unlock Session.",
   "changeAccountPasswordTitle": "パスワードの変更",
-  "changeAccountPasswordDescription": "パスワードを変更する",
+  "changeAccountPasswordDescription": "Change the password required to unlock Session.",
   "removeAccountPasswordTitle": "パスワードの削除",
-  "removeAccountPasswordDescription": "このアカウントに設定されているパスワードを削除します",
+  "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "パスワードを入力してください",
   "confirmPassword": "パスワードを再確認",
+  "enterNewPassword": "Please enter your new password",
+  "confirmNewPassword": "Confirm new password",
   "showRecoveryPhrasePasswordRequest": "パスワードを入力してください",
   "recoveryPhraseSavePromptMain": "リカバリーフレーズは、Session ID のマスターキーです。端末にアクセスできなくなった場合、これを使用して Session ID を復元できます。リカバリーフレーズを安全な場所に保管し、誰にも教えないでください。",
   "invalidOpenGroupUrl": "URL が無効です",
   "copiedToClipboard": "クリップボードにコピーされました",
-  "passwordViewTitle": "パスワード入力",
-  "unlock": "ロック解除",
+  "passwordViewTitle": "Enter Password",
   "password": "パスワード",
   "setPassword": "パスワードを設定",
   "changePassword": "パスワードを変更",
+  "createPassword": "Create your password",
   "removePassword": "パスワードを削除",
   "maxPasswordAttempts": "パスワードが無効です。データベースをリセットしますか？",
-  "typeInOldPassword": "古いパスワードを入力してください",
+  "typeInOldPassword": "Please enter your current password",
   "invalidOldPassword": "古いパスワードが無効です。",
   "invalidPassword": "無効なパスワード",
   "noGivenPassword": "パスワードを入力してください",
@@ -281,10 +301,10 @@
   "setPasswordToastDescription": "パスワードが設定されました。安全に保管してください。",
   "changePasswordToastDescription": "パスワードが変更されました。安全に保管してください。",
   "removePasswordToastDescription": "パスワードを削除しました。",
-  "publicChatExists": "あなたはすでにこのオープングループに接続されています",
-  "connectToServerFail": "グループに参加できませんでした",
+  "publicChatExists": "You are already connected to this community",
+  "connectToServerFail": "Couldn't join community",
   "connectingToServer": "接続中...",
-  "connectToServerSuccess": "オープングループに参加しました",
+  "connectToServerSuccess": "Successfully connected to community",
   "setPasswordFail": "パスワードの設定に失敗しました",
   "passwordLengthError": "パスワードの長さを6文字から64文字にしてください",
   "passwordTypeError": "パスワードは文字列でなければいけません",
@@ -296,20 +316,20 @@
   "editProfileModalTitle": "プロフィール",
   "groupNamePlaceholder": "グループ名",
   "inviteContacts": "友達にオススメする",
-  "addModerators": "モデレータを追加",
-  "removeModerators": "モデレーターを削除",
-  "addAsModerator": "Add As Moderator",
-  "removeFromModerators": "モデレータから削除",
+  "addModerators": "Add Admins",
+  "removeModerators": "Remove Admins",
+  "addAsModerator": "Add as Admin",
+  "removeFromModerators": "Remove From Admins",
   "add": "追加",
   "addingContacts": "連絡先を追加",
   "noContactsToAdd": "追加できる連絡先がありません",
   "noMembersInThisGroup": "このグループには他のメンバーがいません。",
-  "noModeratorsToRemove": "削除するモデレータがいません",
+  "noModeratorsToRemove": "no admins to remove",
   "onlyAdminCanRemoveMembers": "あなたは作成者ではありません",
   "onlyAdminCanRemoveMembersDesc": "グループの作成者のみがユーザーを削除できます",
   "createAccount": "アカウントを作成",
   "startInTrayTitle": "システムトレイに常駐",
-  "startInTrayDescription": "ウィンドウを閉じてもSessionはバックグラウンドで実行され続けます",
+  "startInTrayDescription": "Keep Session running in the background when you close the window.",
   "yourUniqueSessionID": "Session ID をご紹介します",
   "allUsersAreRandomly...": "Session ID は、Session で連絡を取るために使用できる一意のアドレスです。本当のアイデンティティに関係なく、あなたの Session ID は設計上完全に匿名でプライベートです。",
   "getStarted": "はじめましょう",
@@ -324,38 +344,40 @@
   "linkDevice": "端末をリンクする",
   "restoreUsingRecoveryPhrase": "アカウントを復元する",
   "or": "または",
-  "ByUsingThisService...": "本サービスを利用する場合、<a href=\"https://getsession.org/terms-of-service\">利用規約</a>および<a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">プライバシーポリシー</a>に同意するものとします",
+  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service \">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "セッションを始めましょう",
   "welcomeToYourSession": "Sessionにようこそ",
-  "newSession": "新しいセッション",
-  "searchFor...": "メッセージまたは会話を検索",
+  "searchFor...": "Search conversations and contacts",
+  "searchForContactsOnly": "Search for contacts",
   "enterSessionID": "Session ID を入力してください",
-  "enterSessionIDOfRecipient": "受信者の Session ID を入力してください",
-  "usersCanShareTheir...": "ユーザーは、アカウント設定に移動して「Session ID を共有」をタップするか、QR コードを共有することで、Session ID を共有できます。",
+  "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
   "message": "メッセージ",
   "appearanceSettingsTitle": "デザイン設定",
   "privacySettingsTitle": "プライバシー",
   "notificationsSettingsTitle": "通知",
+  "notificationsSettingsContent": "Notification Content",
+  "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "リカバリーフレーズを入力してください",
   "displayNameEmpty": "表示名を選択してください",
   "members": "$count$ 人のメンバー",
-  "joinOpenGroup": "公開グループに参加する",
-  "newClosedGroup": "新しい非公開グループ",
+  "join": "Join",
+  "joinOpenGroup": "Join Community",
+  "createGroup": "Create Group",
+  "create": "Create",
   "createClosedGroupNamePrompt": "グループ名",
   "createClosedGroupPlaceholder": "グループ名を入力してください",
-  "openGroupURL": "グループの URL を開く",
-  "enterAnOpenGroupURL": "公開グループの URL を入力する",
+  "openGroupURL": "Community URL",
+  "enterAnOpenGroupURL": "Enter Community URL",
   "next": "進む",
   "invalidGroupNameTooShort": "グループ名を入力してください",
   "invalidGroupNameTooLong": "短いグループ名を入力してください",
   "pickClosedGroupMember": "グループメンバーを少なくとも 2 人選択してください",
-  "closedGroupMaxSize": "非公開グループは 100 人を超えるメンバーを抱えることはできません",
+  "closedGroupMaxSize": "A group cannot have more than 100 members",
   "noBlockedContacts": "ブロックしている連絡先はありません",
-  "userAddedToModerators": "モデレータリストにユーザーを追加しました",
-  "userRemovedFromModerators": "モデレータリストからユーザーを削除しました",
+  "userAddedToModerators": "User added to admin list",
+  "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "または、以下のグループに参加する…",
-  "helpUsTranslateSession": "Sessionの翻訳にご協力ください",
-  "translation": "翻訳する",
+  "helpUsTranslateSession": "Translate Session",
   "closedGroupInviteFailTitle": "グループ招待に失敗しました",
   "closedGroupInviteFailTitlePlural": "グループ招待に失敗",
   "closedGroupInviteFailMessage": "グループメンバーの招待に成功することができません",
@@ -363,7 +385,7 @@
   "closedGroupInviteOkText": "招待を再試行する",
   "closedGroupInviteSuccessTitlePlural": "グループ招待が完了しました",
   "closedGroupInviteSuccessTitle": "グループ招待に成功しました",
-  "closedGroupInviteSuccessMessage": "クローズドグループのメンバー招待に成功",
+  "closedGroupInviteSuccessMessage": "Successfully invited group members",
   "notificationForConvo": "通知",
   "notificationForConvo_all": "すべて",
   "notificationForConvo_disabled": "無効",
@@ -377,8 +399,8 @@
   "linkVisitWarningTitle": "このリンクをブラウザで開きますか？",
   "linkVisitWarningMessage": "ブラウザーで $url$ を開いてもよろしいですか？",
   "open": "開く",
-  "audioMessageAutoplayTitle": "音声メッセージの自動再生",
-  "audioMessageAutoplayDescription": "音声メッセージを連続して自動的に再生する",
+  "audioMessageAutoplayTitle": "Autoplay Audio Messages",
+  "audioMessageAutoplayDescription": "Autoplay consecutive audio messages.",
   "clickToTrustContact": "クリックしてダウンロード",
   "trustThisContactDialogTitle": "$name$ を信頼しますか？",
   "trustThisContactDialogDescription": "$name$ が送信したメディアをダウンロードしてもよろしいですか？",
@@ -391,19 +413,21 @@
   "dialogClearAllDataDeletionFailedDesc": "データは不明なエラーにより削除されませんでした。このデバイスからデータを削除しますか？",
   "dialogClearAllDataDeletionFailedTitleQuestion": "このデバイスからデータを削除しますか？",
   "dialogClearAllDataDeletionFailedMultiple": "これらのサービスノードによって削除されなかったデータ: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "このデバイスのみを消去しますか？またはアカウント全体を削除しますか？",
-  "deviceOnly": "端末のみ",
-  "entireAccount": "アカウント全体",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "deviceOnly": "Clear Device Only",
+  "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "本当にデバイスデータのみを削除しますか？",
-  "areYouSureDeleteEntireAccount": "ネットワークデータを含むアカウント全体を削除してもよろしいですか？",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your data from the network? If you continue, you will not be able to restore your messages or contacts.",
   "iAmSure": "私は確信している",
   "recoveryPhraseSecureTitle": "もう少しで完了です",
   "recoveryPhraseRevealMessage": "復元フレーズを保存してアカウントを保護します。復元フレーズを確認し、安全に保存してください",
   "recoveryPhraseRevealButtonText": "復元フレーズを表示",
   "notificationSubtitle": "通知設定 $setting$",
-  "surveyTitle": "セッションアンケートに参加する",
-  "goToOurSurvey": "アンケートへ移動",
+  "surveyTitle": "We'd Love Your Feedback",
+  "faq": "FAQ",
+  "support": "Support",
   "clearAll": "すべて消去する",
+  "clearDataSettingsTitle": "Clear Data",
   "messageRequests": "メッセージリクエスト",
   "requestsSubtitle": "保留中のリクエスト",
   "requestsPlaceholder": "リクエストなし",
@@ -414,6 +438,8 @@
   "accept": "同意",
   "decline": "拒否",
   "endCall": "通話を終了",
+  "permissionsSettingsTitle": "Permissions",
+  "helpSettingsTitle": "Help",
   "cameraPermissionNeededTitle": "音声/ビデオ通話の権限が必要です",
   "cameraPermissionNeeded": "プライバシー設定で「音声とビデオ通話」の許可を有効にできます。",
   "unableToCall": "進行中の通話を先にキャンセルする",
@@ -423,11 +449,12 @@
   "noCameraFound": "カメラが見つかりません",
   "noAudioInputFound": "オーディオ入力が見つかりません",
   "noAudioOutputFound": "オーディオ出力が見つかりません",
-  "callMediaPermissionsTitle": "音声とビデオ通話",
+  "callMediaPermissionsTitle": "Voice and Video Calls (Beta)",
   "callMissedCausePermission": "プライバシー設定で「音声通話とビデオ通話」権限を有効にする必要があるため、「$name$」からの通話が失敗しました。",
   "callMissedNotApproved": "この会話を承認していないため、'$name$' からの通話が失敗しました。最初にメッセージを送信してください。",
-  "callMediaPermissionsDescription": "他のユーザーからの音声通話やビデオ通話を受け入れることができます",
-  "callMediaPermissionsDialogContent": "現在の音声/ビデオ通話の実装においては、あなたのIPアドレスがOxen Foundationサーバー及び通話/着信ユーザーに表示されます。",
+  "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
+  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "$name$ と通話しました",
   "answeredACall": "$name$ と通話",
   "trimDatabase": "データベースの切り取り",
@@ -441,7 +468,7 @@
   "declineRequestMessage": "こちらの友達リクエストを本当に拒否しますか？",
   "respondingToRequestWarning": "このユーザーにメッセージを送信すると、自動的にメッセージのリクエストが受け付けられ、あなたのセッションIDが公開されます。",
   "hideRequestBanner": "メッセージリクエストバナーを非表示にする",
-  "openMessageRequestInbox": "メッセージ・リクエストを表示",
+  "openMessageRequestInbox": "Message Requests",
   "noMessageRequestsPending": "保留中のメッセージ・リクエストはありません",
   "noMediaUntilApproved": "承認されるまで添付ファイルを送信できません",
   "mustBeApproved": "この機能を使うには承認する必要があります。",
@@ -449,5 +476,17 @@
   "clearAllConfirmationTitle": "すべてのメッセージリクエストを削除",
   "clearAllConfirmationBody": "本当に全てのメッセージリクエストを消去しますか？",
   "hideBanner": "非表示",
-  "openMessageRequestInboxDescription": "メッセージリクエストの受信トレイを表示"
+  "openMessageRequestInboxDescription": "メッセージリクエストの受信トレイを表示",
+  "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
+  "expandedReactionsText": "Show Less",
+  "reactionNotification": "Reacts to a message with $emoji$",
+  "otherSingular": "$number$ other",
+  "otherPlural": "$number$ others",
+  "reactionPopup": "reacted with",
+  "reactionPopupOne": "$name$",
+  "reactionPopupTwo": "$name$ & $name2$",
+  "reactionPopupThree": "$name$, $name2$ & $name3$",
+  "reactionPopupMany": "$name$, $name2$, $name3$ &",
+  "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
+  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message"
 }
