--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -1,131 +1,131 @@
 {
-  "copyErrorAndQuit": "Kopiraj napako in zapusti aplikacijo",
-  "unknown": "Neznano",
-  "databaseError": "Napaka v bazi podatkov",
-  "mainMenuFile": "&Datoteka",
-  "mainMenuEdit": "&Urejanje",
-  "mainMenuView": "&Pogled",
-  "mainMenuWindow": "&Okno",
-  "mainMenuHelp": "&Pomoč",
-  "appMenuHide": "Skrij",
-  "appMenuHideOthers": "Skrij ostale",
-  "appMenuUnhide": "Prikaži vse",
-  "appMenuQuit": "Zapusti Session",
-  "editMenuUndo": "Razveljavi",
-  "editMenuRedo": "Ponovno uveljavi",
-  "editMenuCut": "Odreži",
-  "editMenuCopy": "Kopiraj",
-  "editMenuPaste": "Prilepi",
-  "editMenuDeleteContact": "Izbriši stik",
-  "editMenuDeleteGroup": "Izbriši skupino",
-  "editMenuSelectAll": "Izberi vse",
-  "windowMenuClose": "Zapri okno",
-  "windowMenuMinimize": "Pomanjšaj",
-  "windowMenuZoom": "Povečava",
-  "viewMenuResetZoom": "Privzeta velikost",
-  "viewMenuZoomIn": "Približaj",
-  "viewMenuZoomOut": "Oddalji",
-  "viewMenuToggleFullScreen": "Celozaslonski način",
-  "viewMenuToggleDevTools": "Vklopi razvijalska orodja",
-  "contextMenuNoSuggestions": "Ni predlogov",
+  "copyErrorAndQuit": "Copy error and quit",
+  "unknown": "Unknown",
+  "databaseError": "Database Error",
+  "mainMenuFile": "&File",
+  "mainMenuEdit": "&Edit",
+  "mainMenuView": "&View",
+  "mainMenuWindow": "&Window",
+  "mainMenuHelp": "&Help",
+  "appMenuHide": "Hide",
+  "appMenuHideOthers": "Hide Others",
+  "appMenuUnhide": "Show All",
+  "appMenuQuit": "Quit Session",
+  "editMenuUndo": "Undo",
+  "editMenuRedo": "Redo",
+  "editMenuCut": "Cut",
+  "editMenuCopy": "Copy",
+  "editMenuPaste": "Paste",
+  "editMenuDeleteContact": "Delete Contact",
+  "editMenuDeleteGroup": "Delete Group",
+  "editMenuSelectAll": "Select all",
+  "windowMenuClose": "Close Window",
+  "windowMenuMinimize": "Minimize",
+  "windowMenuZoom": "Zoom",
+  "viewMenuResetZoom": "Actual Size",
+  "viewMenuZoomIn": "Zoom In",
+  "viewMenuZoomOut": "Zoom Out",
+  "viewMenuToggleFullScreen": "Toggle Full Screen",
+  "viewMenuToggleDevTools": "Toggle Developer Tools",
+  "contextMenuNoSuggestions": "No Suggestions",
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
   "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
-  "loading": "Nalagam ...",
-  "done": "Končano",
-  "youLeftTheGroup": "Zapustili ste skupino",
+  "loading": "Loading...",
+  "done": "Done",
+  "youLeftTheGroup": "You have left the group.",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessages": "Neprebrana sporočila",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Report a Bug",
-  "markAllAsRead": "Označi vse kot prebrano",
-  "incomingError": "Napaka pri obdelavi dohodnega sporočila",
-  "media": "Medijske datoteke",
-  "mediaEmptyState": "V tem pogovoru ni nobene medijske datoteke",
-  "documents": "Dokumenti",
-  "documentsEmptyState": "V tem pogovoru ni nobenega dokumenta",
-  "today": "Danes",
-  "yesterday": "Včeraj",
-  "thisWeek": "Ta teden",
-  "thisMonth": "Ta mesec",
-  "voiceMessage": "Glasovno sporočilo",
-  "stagedPreviewThumbnail": "Osnutek predogledne sličice povezave na: $domain$",
-  "previewThumbnail": "Predogledna sličica povezave na: $domain$",
-  "stagedImageAttachment": "Osnutek slikovne priponke: $path$",
-  "oneNonImageAtATimeToast": "Neslikovne datoteke so omejene na eno priponko na sporočilo.",
-  "cannotMixImageAndNonImageAttachments": "V istem sporočilu ne morete kombinirati neslikovnih in slikovnih priponk.",
-  "maximumAttachments": "K sporočilu ne morete več dodajati priponk.",
-  "fileSizeWarning": "Izbrana datoteka presega največjo dovoljeno velikost.",
-  "unableToLoadAttachment": "Izbrane priponke ni bilo mogoče zagnati.",
-  "offline": "Ni povezave z internetom",
-  "debugLog": "Sistemska zabeležba",
+  "markAllAsRead": "Mark All as Read",
+  "incomingError": "Error handling incoming message",
+  "media": "Media",
+  "mediaEmptyState": "No media",
+  "documents": "Documents",
+  "documentsEmptyState": "No documents",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "thisWeek": "This week",
+  "thisMonth": "This Month",
+  "voiceMessage": "Voice Message",
+  "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
+  "previewThumbnail": "Thumbnail link preview for $domain$",
+  "stagedImageAttachment": "Draft image attachment: $path$",
+  "oneNonImageAtATimeToast": "Sorry, there is a limit of one non-image attachment per message",
+  "cannotMixImageAndNonImageAttachments": "Sorry, you cannot mix images with other file types in one message",
+  "maximumAttachments": "Maximum number of attachments reached. Please send remaining attachments in a separate message.",
+  "fileSizeWarning": "Attachment exceeds size limits for the type of message you're sending.",
+  "unableToLoadAttachment": "Sorry, there was an error setting your attachment.",
+  "offline": "Offline",
+  "debugLog": "Debug Log",
   "showDebugLog": "Export Logs",
   "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
-  "goToReleaseNotes": "Opombe k izdaji",
-  "goToSupportPage": "Podporna stran",
-  "about": "O programu",
-  "show": "Prikaži",
+  "goToReleaseNotes": "Go to Release Notes",
+  "goToSupportPage": "Go to Support Page",
+  "about": "About",
+  "show": "Show",
   "sessionMessenger": "Session",
-  "noSearchResults": "Ni rezultata za \"$searchTerm$\"",
+  "noSearchResults": "No results found for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
-  "contactsHeader": "Stiki",
-  "messagesHeader": "Sporočila",
-  "settingsHeader": "Nastavitve",
-  "typingAlt": "Animacija tipkanja za ta pogovor",
-  "contactAvatarAlt": "Avatar uporabnika $name$",
-  "downloadAttachment": "Prenesi priponko",
-  "replyToMessage": "Odgovor na sporočilo",
-  "replyingToMessage": "Odgovori:",
-  "originalMessageNotFound": "Izvorno sporočilo ni bilo najdeno",
-  "you": "Vi",
-  "audioPermissionNeededTitle": "Microphone access required",
-  "audioPermissionNeeded": "Za pošiljanje glasovnih sporočil potrebuje aplikacija Session Desktop dostop do vašega mikrofona.",
-  "audio": "Zvok",
+  "contactsHeader": "Contacts",
+  "messagesHeader": "Messages",
+  "settingsHeader": "Settings",
+  "typingAlt": "Typing animation for this conversation",
+  "contactAvatarAlt": "Avatar for contact $name$",
+  "downloadAttachment": "Download Attachment",
+  "replyToMessage": "Reply to message",
+  "replyingToMessage": "Replying to:",
+  "originalMessageNotFound": "Original message not found",
+  "you": "You",
+  "audioPermissionNeededTitle": "Microphone Access Required",
+  "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
+  "audio": "Audio",
   "video": "Video",
-  "photo": "Slika",
+  "photo": "Photo",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "V redu",
-  "cancel": "Prekliči",
-  "close": "Zapri",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "close": "Close",
   "continue": "Continue",
-  "error": "Napaka",
-  "delete": "Izbriši",
+  "error": "Error",
+  "delete": "Delete",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteJustForMe": "Izbriši le zame",
-  "deleteForEveryone": "Izbriši za vse",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
   "deleteMessagesQuestion": "Delete $count$ messages?",
-  "deleteMessageQuestion": "Izbriši to sporočilo?",
-  "deleteMessages": "Izbriši sporočila",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Delete Messages",
   "deleted": "$count$ deleted",
-  "messageDeletedPlaceholder": "To sporočilo je bilo izbrisano",
-  "from": "Pošiljatelj",
-  "to": "v",
-  "sent": "Poslano",
-  "received": "Prejeto",
-  "sendMessage": "Pošlji sporočilo",
-  "groupMembers": "Člani skupine",
-  "moreInformation": "Več informacij",
-  "resend": "Ponovno pošlji",
-  "deleteConversationConfirmation": "Ali res želite nepovratno izbrisati ta pogovor?",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "from": "From:",
+  "to": "To:",
+  "sent": "Sent",
+  "received": "Received",
+  "sendMessage": "Message",
+  "groupMembers": "Group members",
+  "moreInformation": "More information",
+  "resend": "Resend",
+  "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clear": "Clear",
-  "clearAllData": "Počisti vse podatke",
+  "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
-  "deleteContactConfirmation": "Ste prepričani, da želite trajno izbrisati pogovor?",
-  "quoteThumbnailAlt": "Predogled slike citiranega sporočila",
-  "imageAttachmentAlt": "Slika je priložena sporočilu",
-  "videoAttachmentAlt": "Zajem slike videa je priložen k sporočilu",
-  "lightboxImageAlt": "Slika je bila poslana tekom pogovora",
-  "imageCaptionIconAlt": "Ikona, ki označuje, da ima ta slika besedilo",
-  "addACaption": "Dodaj besedilo ...",
+  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "quoteThumbnailAlt": "Thumbnail of image from quoted message",
+  "imageAttachmentAlt": "Image attached to message",
+  "videoAttachmentAlt": "Screenshot of video attached to message",
+  "lightboxImageAlt": "Image sent in conversation",
+  "imageCaptionIconAlt": "Icon showing that this image has a caption",
+  "addACaption": "Add a caption...",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
-  "save": "Shrani",
+  "save": "Save",
   "saveLogToDesktop": "Save log to desktop",
-  "saved": "Shrani",
+  "saved": "Saved",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
@@ -159,82 +159,82 @@
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "ime pošiljatelja in sporočilo",
-  "noNameOrMessage": "brez imena pošiljatelja in sporočila",
-  "nameOnly": "samo ime pošiljatelja",
-  "newMessage": "Novo sporočilo",
+  "nameAndMessage": "Name and content",
+  "noNameOrMessage": "No name or content",
+  "nameOnly": "Name Only",
+  "newMessage": "New Message",
   "createConversationNewContact": "Create a conversation with a new contact",
   "createConversationNewGroup": "Create a group with existing contacts",
   "joinACommunity": "Join a community",
   "chooseAnAction": "Choose an action to start a conversation",
-  "newMessages": "Novo sporočilo",
-  "notificationMostRecentFrom": "Najnovejše od:",
-  "notificationFrom": "Od:",
-  "notificationMostRecent": "Najnovejše:",
-  "sendFailed": "Pošiljanje ni uspelo",
-  "mediaMessage": "Multimedijsko sporočilo",
+  "newMessages": "New Messages",
+  "notificationMostRecentFrom": "Most recent from: $name$",
+  "notificationFrom": "From:",
+  "notificationMostRecent": "Most recent:",
+  "sendFailed": "Send Failed",
+  "mediaMessage": "Media message",
   "messageBodyMissing": "Please enter a message body.",
   "messageBody": "Message body",
-  "unblockToSend": "Za pošiljanje sporočila morate najprej odblokirati ta stik",
-  "unblockGroupToSend": "Odblokiraj to skupino za pošiljanje sporočila.",
-  "youChangedTheTimer": "Odštevanje za izginjajoča sporočila ste nastavili na $time$",
-  "timerSetOnSync": "Odštevanje za izginjajoča števila je bilo posodobljeno na $time$",
-  "theyChangedTheTimer": "Uporabnik $name$ je nastavil odštevanje za izginjajoča števila na $time$",
-  "timerOption_0_seconds": "Izključeno",
-  "timerOption_5_seconds": "5 sekund",
-  "timerOption_10_seconds": "10 sekund",
-  "timerOption_30_seconds": "30 sekund",
-  "timerOption_1_minute": "1 minuta",
-  "timerOption_5_minutes": "5 minut",
-  "timerOption_30_minutes": "30 minut",
-  "timerOption_1_hour": "1 ura",
-  "timerOption_6_hours": "6 ur",
-  "timerOption_12_hours": "12 ur",
-  "timerOption_1_day": "1 dan",
-  "timerOption_1_week": "1 teden",
-  "disappearingMessages": "Izginjajoča sporočila",
+  "unblockToSend": "Unblock this contact to send a message.",
+  "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
+  "youChangedTheTimer": "You set the disappearing message timer to $time$",
+  "timerSetOnSync": "Updated disappearing message timer to $time$",
+  "theyChangedTheTimer": "$name$ set the disappearing message timer to $time$",
+  "timerOption_0_seconds": "Off",
+  "timerOption_5_seconds": "5 seconds",
+  "timerOption_10_seconds": "10 seconds",
+  "timerOption_30_seconds": "30 seconds",
+  "timerOption_1_minute": "1 minute",
+  "timerOption_5_minutes": "5 minutes",
+  "timerOption_30_minutes": "30 minutes",
+  "timerOption_1_hour": "1 hour",
+  "timerOption_6_hours": "6 hours",
+  "timerOption_12_hours": "12 hours",
+  "timerOption_1_day": "1 day",
+  "timerOption_1_week": "1 week",
+  "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
-  "clearNickname": "Clear nickname",
+  "clearNickname": "Clear Nickname",
   "nicknamePlaceholder": "New Nickname",
   "changeNicknameMessage": "Enter a nickname for this user",
-  "timerOption_0_seconds_abbreviated": "Izključeno",
-  "timerOption_5_seconds_abbreviated": "5 s",
-  "timerOption_10_seconds_abbreviated": "10 s",
-  "timerOption_30_seconds_abbreviated": "30 s",
-  "timerOption_1_minute_abbreviated": "1 min",
-  "timerOption_5_minutes_abbreviated": "5 min",
-  "timerOption_30_minutes_abbreviated": "30 min",
-  "timerOption_1_hour_abbreviated": "1 h",
-  "timerOption_6_hours_abbreviated": "6 h",
-  "timerOption_12_hours_abbreviated": "12 h",
-  "timerOption_1_day_abbreviated": "1 d",
-  "timerOption_1_week_abbreviated": "1 t",
-  "disappearingMessagesDisabled": "Izginjajoča sporočila so izključena",
-  "disabledDisappearingMessages": "Uporabnik $name$ je izključil izginjajoča sporočila",
-  "youDisabledDisappearingMessages": "Izključili ste izginjajoča sporočila",
-  "timerSetTo": "Čas izginjanja je nastavljen na $time$",
-  "noteToSelf": "Osebna zabeležka",
+  "timerOption_0_seconds_abbreviated": "off",
+  "timerOption_5_seconds_abbreviated": "5s",
+  "timerOption_10_seconds_abbreviated": "10s",
+  "timerOption_30_seconds_abbreviated": "30s",
+  "timerOption_1_minute_abbreviated": "1m",
+  "timerOption_5_minutes_abbreviated": "5m",
+  "timerOption_30_minutes_abbreviated": "30m",
+  "timerOption_1_hour_abbreviated": "1h",
+  "timerOption_6_hours_abbreviated": "6h",
+  "timerOption_12_hours_abbreviated": "12h",
+  "timerOption_1_day_abbreviated": "1d",
+  "timerOption_1_week_abbreviated": "1w",
+  "disappearingMessagesDisabled": "Disappearing messages disabled",
+  "disabledDisappearingMessages": "$name$ disabled disappearing messages.",
+  "youDisabledDisappearingMessages": "You disabled disappearing messages.",
+  "timerSetTo": "Disappearing message time set to $time$",
+  "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
-  "startConversation": "Začni nov pogovor ...",
-  "invalidNumberError": "Neveljavna številka",
+  "startConversation": "Start New Conversation",
+  "invalidNumberError": "Invalid Session ID or ONS Name",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
-  "autoUpdateNewVersionTitle": "Na voljo je posodobitev aplikacije Session",
-  "autoUpdateNewVersionMessage": "Na voljo je nova različica aplikacije Session.",
-  "autoUpdateNewVersionInstructions": "Za uveljavitev nadgradenj pritisnite tipko Ponovno zaženi Session",
-  "autoUpdateRestartButtonLabel": "Ponovno zaženi Session",
-  "autoUpdateLaterButtonLabel": "Kasneje",
+  "autoUpdateNewVersionTitle": "Session update available",
+  "autoUpdateNewVersionMessage": "There is a new version of Session available.",
+  "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
+  "autoUpdateRestartButtonLabel": "Restart Session",
+  "autoUpdateLaterButtonLabel": "Later",
   "autoUpdateDownloadButtonLabel": "Download",
-  "autoUpdateDownloadedMessage": "The new update has been downloaded.",
+  "autoUpdateDownloadedMessage": "Update has been downloaded.",
   "autoUpdateDownloadInstructions": "Would you like to download the update?",
-  "leftTheGroup": "Uporabnik $name$ je zapustil skupino",
-  "multipleLeftTheGroup": "Uporabnik $name$ je zapustil skupino",
-  "updatedTheGroup": "Skpina je bila posodobljena",
-  "titleIsNow": "Novo ime je '$name$'",
-  "joinedTheGroup": "Uporabnik $name$ se je pridružil skupini",
-  "multipleJoinedTheGroup": "Uporabnik $names$ se je pridružil skupini",
+  "leftTheGroup": "$name$ has left the group.",
+  "multipleLeftTheGroup": "$name$ left the group",
+  "updatedTheGroup": "Group updated",
+  "titleIsNow": "Group name is now '$name$'.",
+  "joinedTheGroup": "$name$ joined the group.",
+  "multipleJoinedTheGroup": "$name$ joined the group.",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
   "blockUser": "Block",
@@ -248,7 +248,7 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "userBanned": "User banned successfully",
+  "userBanned": "Banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
   "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
@@ -327,7 +327,7 @@
   "noModeratorsToRemove": "no admins to remove",
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
-  "createAccount": "Create Account",
+  "createAccount": "Create account",
   "startInTrayTitle": "Keep in System Tray",
   "startInTrayDescription": "Keep Session running in the background when you close the window.",
   "yourUniqueSessionID": "Say hello to your Session ID",
@@ -358,7 +358,7 @@
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
-  "displayNameEmpty": "Please pick a display name",
+  "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
