chore: pull farsi languages from crowdin

--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -28,9 +28,9 @@
   "viewMenuToggleFullScreen": "تاگل فول اسکرین",
   "viewMenuToggleDevTools": "تاگل ابزار های توسعه دهنده",
   "contextMenuNoSuggestions": "بدون پیشنهاد",
-  "openGroupInvitation": "Community invitation",
+  "openGroupInvitation": "دعوت انجمن",
   "joinOpenGroupAfterInvitationConfirmationTitle": "جوین شدن به $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "آیا مطمئن هستید که میخواهید عضو انجمن $roomName$ شوید؟",
   "couldntFindServerMatching": "سرور گروه عمومی مورد نظر یافت نشد",
   "enterSessionIDOrONSName": "شناسه Session یا نام ONS را وارید کنید",
   "startNewConversationBy...": "یک مکالمه جدید را با وارد کردن شناسه Session شخصی شروع کنید یا شناسه جلسه خود را با آنها به اشتراک بگذارید.",
@@ -113,7 +113,7 @@
   "deleteConversationConfirmation": "آیا می‌خواهید این گفتگو را برای همیشه حذف کنید؟",
   "clear": "پاک ",
   "clearAllData": "پاک کردن همه داتا",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "این کار پیام‌ها و مخاطبین شما را برای همیشه حذف می‌کند.",
   "deleteContactConfirmation": "آیا مطمئن هستید که می‌خواهید این مکالمه را حذف کنید؟",
   "quoteThumbnailAlt": "پیش‌نمایش تصویر از پیام نقل قول شده",
   "imageAttachmentAlt": "تصویر پیوست شده به پیام",
@@ -134,7 +134,7 @@
   "mediaPermissionsTitle": "میکروفون",
   "mediaPermissionsDescription": "اجازه دسترسی به میکروفون",
   "spellCheckTitle": "بررسی املا",
-  "spellCheckDescription": "Enable spell check when typing messages.",
+  "spellCheckDescription": "فعال کردن بررسی املایی هنگام نوشتن پیام.",
   "spellCheckDirty": "برای اعمال تنظیمات جدید نیاز است Session را دوباره راه‌اندازی کنید",
   "readReceiptSettingDescription": "رسیدهای خواندن در چت‌های یک به یک روان شود.",
   "readReceiptSettingTitle": "رسیدهای خواندن",
@@ -143,17 +143,17 @@
   "zoomFactorSettingTitle": "فاکتور زوم",
   "themesSettingTitle": "تم‌ها",
   "primaryColor": "رنگ اولیه",
-  "primaryColorGreen": "Primary color green",
-  "primaryColorBlue": "Primary color blue",
-  "primaryColorYellow": "Primary color yellow",
-  "primaryColorPink": "Primary color pink",
-  "primaryColorPurple": "Primary color purple",
-  "primaryColorOrange": "Primary color  orange",
-  "primaryColorRed": "Primary color red",
-  "classicDarkThemeTitle": "Classic Dark",
-  "classicLightThemeTitle": "Classic Light",
-  "oceanDarkThemeTitle": "Ocean Dark",
-  "oceanLightThemeTitle": "Ocean Light",
+  "primaryColorGreen": "رنگ اصلی سبز",
+  "primaryColorBlue": "رنگ اصلی آبی",
+  "primaryColorYellow": "رنگ اصلی زرد",
+  "primaryColorPink": "رنگ اصلی صورتی",
+  "primaryColorPurple": "رنگ اصلی بنفش",
+  "primaryColorOrange": "رنگ اصلی نارنجی",
+  "primaryColorRed": "رنگ اصلی قرمز",
+  "classicDarkThemeTitle": "کلاسیک تیره",
+  "classicLightThemeTitle": "کلاسیک روشن",
+  "oceanDarkThemeTitle": "آبی اقیانوسی تیره",
+  "oceanLightThemeTitle": "آبی اقیانوسی روشن",
   "pruneSettingTitle": "مرتب‌سازی انجمن‌ها",
   "pruneSettingDescription": "پیام‌های قدیمی‌تر از ۶ ماه را از انجمن‌های دارای بیش از ۲۰۰۰ پیام، حذف کنید.",
   "enable": "فعال سازی",
@@ -163,10 +163,10 @@
   "noNameOrMessage": "عدم نمایش نام یا محتوا",
   "nameOnly": "فقط نام",
   "newMessage": "پیام جدید",
-  "createConversationNewContact": "Create a conversation with a new contact",
-  "createConversationNewGroup": "Create a group with existing contacts",
-  "joinACommunity": "Join a community",
-  "chooseAnAction": "Choose an action to start a conversation",
+  "createConversationNewContact": "یک گفتگو با یک مخاطب جدید ایجاد کنید",
+  "createConversationNewGroup": "یک گروه با مخاطبان موجود ایجاد کنید",
+  "joinACommunity": "عضو یک گروه شوید",
+  "chooseAnAction": "یک اقدام برای شروع مکالمه انتخاب کنید",
   "newMessages": "پیام‌های جدید",
   "notificationMostRecentFrom": "جدید ترین از:",
   "notificationFrom": "از:",
@@ -174,7 +174,7 @@
   "sendFailed": "ارسال ناموفق بود",
   "mediaMessage": "پیام رسانه‌ای",
   "messageBodyMissing": "لطفا یک پیام وارد کنید.",
-  "messageBody": "Message body",
+  "messageBody": "متن پیام",
   "unblockToSend": "برای ارسال پیام،‌ ابتدا این مخاطب را از مسدود بودن درآورید!",
   "unblockGroupToSend": "برای ارسال پیام در گروه، آن را رفع انسداد کنید.",
   "youChangedTheTimer": "شما پیام تایمر پیام نابود شونده را روی $time$ تنظیم کردید",
@@ -243,7 +243,7 @@
   "unblockUser": "رفع مسدودیت",
   "unblocked": "رفع مسدودی",
   "blocked": "مسدود شده",
-  "blockedSettingsTitle": "مخاطبین مسدودشده",
+  "blockedSettingsTitle": "مخاطبین مسدود شده",
   "conversationsSettingsTitle": "مکالمات",
   "unbanUser": "غیر مسدود کردن کاربر",
   "userUnbanned": "کاربر با موفقیت غیر مسدود شد",
@@ -253,14 +253,14 @@
   "userBanned": "User banned successfully",
   "userBanFailed": "مسدود کردن شکست خورد!",
   "leaveGroup": "ترک کردن گروه",
-  "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
+  "leaveAndRemoveForEveryone": "ترک گروه و حذف برای همه",
   "leaveGroupConfirmation": "آیا مطمئن هستید که می‌خواهید این گروه را ترک کنید؟",
   "leaveGroupConfirmationAdmin": "شما مدیر این گروه هستید، ترک کردن گروه باعث حذف آن برای تمامی اعضای کنونی خواهد شد. مطمئنید که می‌خواهید گروه را ترک کنید؟",
   "cannotRemoveCreatorFromGroup": "حذف این کاربر ممکن نیست",
   "cannotRemoveCreatorFromGroupDesc": "شما نمی‌توانید سازنده گروه را حذف کنید.",
   "noContactsForGroup": "هنوز هیچ مخاطبی ندارید",
-  "failedToAddAsModerator": "Failed to add user as admin",
-  "failedToRemoveFromModerator": "Failed to remove user from the admin list",
+  "failedToAddAsModerator": "کاربر به عنوان مدیر اضافه نشد",
+  "failedToRemoveFromModerator": "کاربر از لیست مدیر حذف نشد",
   "copyMessage": "کپی متن پیام",
   "selectMessage": "انتخاب پیام",
   "editGroup": "ویرایش گروه",
@@ -303,10 +303,10 @@
   "setPasswordToastDescription": "رمز عبور شما تنظیم شده است. لطفاً آن را فراموش نکنید.",
   "changePasswordToastDescription": "رمز عبور شما تغییر یافته است. لطفاً آن را فراموش نکنید.",
   "removePasswordToastDescription": "رمز عبور شما حذف شده است.",
-  "publicChatExists": "You are already connected to this community",
+  "publicChatExists": "شما قبلا عضو این گروه شده اید",
   "connectToServerFail": "نمی‌توانید محلق شوید",
   "connectingToServer": "در حال اتصال...",
-  "connectToServerSuccess": "Successfully connected to community",
+  "connectToServerSuccess": "شما با موفقیت عضو انجمن شدید",
   "setPasswordFail": "رمز عبور تنظیم نشد",
   "passwordLengthError": "رمز عبور باید بین ۶ تا ۶۴ کاراکتر طول داشته باشد",
   "passwordTypeError": "رمز عبور باید متن باشد",
@@ -318,15 +318,15 @@
   "editProfileModalTitle": "نمایه",
   "groupNamePlaceholder": "نام گروه",
   "inviteContacts": "دعوت مخاطبین",
-  "addModerators": "Add Admins",
-  "removeModerators": "Remove Admins",
-  "addAsModerator": "Add as Admin",
-  "removeFromModerators": "Remove From Admins",
+  "addModerators": "افزودن مدیران",
+  "removeModerators": "حذف مدیران",
+  "addAsModerator": "افزودن مدیر",
+  "removeFromModerators": "حذف از مدیران",
   "add": "افزودن",
   "addingContacts": "افزودن مخاطبین به $name$",
   "noContactsToAdd": "مخاطبی برای اضافه کردن وجود ندارد",
   "noMembersInThisGroup": "هیچ عضو دیگری در این گروه نیست",
-  "noModeratorsToRemove": "no admins to remove",
+  "noModeratorsToRemove": "مدیری برای حذف کردن نیست",
   "onlyAdminCanRemoveMembers": "شما موسس گروه نیستید",
   "onlyAdminCanRemoveMembersDesc": "فقط موسس گروه میتواند کاربران را حذف کند",
   "createAccount": "Create Account",
@@ -346,19 +346,19 @@
   "linkDevice": "اتصال دستگاه",
   "restoreUsingRecoveryPhrase": "بازیابی حساب",
   "or": "یا",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service \">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "با استفاده از این سرویس، شما با <a href=\"https://getsession.org/terms-of-service \">شرایط خدمات</a> و <a href=\"https://getsession.org/privacy-policy\" target=\"_blank\">سیاست حفظ حریم خصوصی</a> ما موافقت خود را اعلام میکنید",
   "beginYourSession": "Session خود را شروع کنید.",
   "welcomeToYourSession": "به Session خوش آمدید",
-  "searchFor...": "Search conversations and contacts",
-  "searchForContactsOnly": "Search for contacts",
+  "searchFor...": "جستجو در مکالمات یا مخاطبین",
+  "searchForContactsOnly": "جستجو در مخاطبین",
   "enterSessionID": "شناسه Session را وارید کنید",
-  "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
+  "enterSessionIDOfRecipient": "آیدی Session یا ons مخاطبت رو وارد کن",
   "message": "پیام",
   "appearanceSettingsTitle": "ظاهر",
   "privacySettingsTitle": "حریم خصوصی",
   "notificationsSettingsTitle": "اعلانات",
   "notificationsSettingsContent": "محتوی اعلان",
-  "notificationPreview": "Preview",
+  "notificationPreview": "پیش نمایش",
   "recoveryPhraseEmpty": "عبارت بازیابی خود را وارد کنید",
   "displayNameEmpty": "لطفا یک نام نمایشی وارد کنید",
   "members": "$count$ عضو",
@@ -376,8 +376,8 @@
   "pickClosedGroupMember": "لطفاً حداقل یک عضو گروه را انتخاب کنید",
   "closedGroupMaxSize": "یک گروه نمی‌تواند بیش از ۱۰۰ عضو داشته باشد.",
   "noBlockedContacts": "شما هیچ مخاطب مسدود‌شده‌ای ندارید.",
-  "userAddedToModerators": "User added to admin list",
-  "userRemovedFromModerators": "User removed from admin list",
+  "userAddedToModerators": "کاربر به لیست مدیران اضافه شد",
+  "userRemovedFromModerators": "کاربر از لیست مدیران حذف شد.",
   "orJoinOneOfThese": "یا به یکی از این محلق شوید ...",
   "helpUsTranslateSession": "ترجمه Session",
   "closedGroupInviteFailTitle": "دعوت به گروه ناموفق بود",
@@ -387,7 +387,7 @@
   "closedGroupInviteOkText": "امتحان دوباره دعوت ها",
   "closedGroupInviteSuccessTitlePlural": "دعوت های گروهی کامل شد",
   "closedGroupInviteSuccessTitle": "دعوت گروهی موفق بود",
-  "closedGroupInviteSuccessMessage": "Successfully invited group members",
+  "closedGroupInviteSuccessMessage": "با موفقیت اعضای گروه دعوت شدند",
   "notificationForConvo": "اعلان‌ها",
   "notificationForConvo_all": "همه",
   "notificationForConvo_disabled": "غیرفعال شده",
@@ -415,14 +415,14 @@
   "dialogClearAllDataDeletionFailedDesc": "داده ها با یک خطای ناشناخته حذف نشدند. آیا می خواهید داده ها را فقط از این دستگاه حذف کنید؟",
   "dialogClearAllDataDeletionFailedTitleQuestion": "آیا می خواهید داده ها را فقط از این دستگاه حذف کنید؟",
   "dialogClearAllDataDeletionFailedMultiple": "داده‌هایی که توسط گره‌های سرویس حذف نشده‌اند: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "dialogClearAllDataDeletionQuestion": "آیا می‌خواهید فقط این دستگاه را پاک کنید یا داتا خود را از شبکه نیز حذف کنید؟",
   "clearDevice": "پاک کردن دستگاه",
   "tryAgain": "تلاش مجدد کنید",
   "areYouSureClearDevice": "آیا مطمئن هستید که می‌خواهید دستگاه‌تان را پاک کنید؟",
   "deviceOnly": "فقط پاک کردن دستگاه",
   "entireAccount": "پاک کردن دستگاه و شبکه",
   "areYouSureDeleteDeviceOnly": "آیا مطمئن هستید که می خواهید فقط داده های دستگاه خود را حذف کنید؟",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your data from the network? If you continue, you will not be able to restore your messages or contacts.",
+  "areYouSureDeleteEntireAccount": "آیا مطمئن هستید که می خواهید داتا های خود را از شبکه حذف کنید؟ اگر ادامه دهید، نمی‌توانید پیام‌ها یا مخاطبین خود را بازیابی کنید.",
   "iAmSure": "مطمئنم",
   "recoveryPhraseSecureTitle": "تقریبا کار شما تمومه!",
   "recoveryPhraseRevealMessage": "با ذخیره کلمات بازیابی، حساب خود را ایمن کنید. کلمات بازیابی خود را آشکار کنید، سپس آن را با خیال راحت ذخیره کنید تا حسابتان را ایمن کنید.",
@@ -432,7 +432,7 @@
   "faq": "سؤالات متداول",
   "support": "همایت",
   "clearAll": "حذف همه",
-  "clearDataSettingsTitle": "Clear Data",
+  "clearDataSettingsTitle": "پاک کردن اطلاعات",
   "messageRequests": "پیام درخواست ها",
   "requestsSubtitle": "درخواست‌های در حال انتظار",
   "requestsPlaceholder": "هیچ درخواستی وجود ندارد",
@@ -473,7 +473,7 @@
   "declineRequestMessage": "آیا از رد کردن این درخواست مکالمه مطمئن هستید?",
   "respondingToRequestWarning": "دادن پیام به این کاربر به معنای قبول کردن خودکار درخواست پیام او و معلوم شدن کد شناسایی Session شما می باشد.",
   "hideRequestBanner": "پنهان کردن بنر درخواست پیام",
-  "openMessageRequestInbox": "Message Requests",
+  "openMessageRequestInbox": "درخواست های پیام",
   "noMessageRequestsPending": "درخواست مکالمه ای در انتظار نمی باشد",
   "noMediaUntilApproved": "شما تا قبل از قبول کردن مکالمه نمی توانید فایلی بفرستید",
   "mustBeApproved": "برای استفاده از این قابلیت باید مکالمه را قبول کنید",
@@ -482,16 +482,16 @@
   "clearAllConfirmationBody": "از پاک کردن تمام درخواست مکالمات مطمئن هستید?",
   "hideBanner": "پنهان کردن",
   "openMessageRequestInboxDescription": "نشان دادن بخش درخواست های پیام رسانی شما",
-  "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
-  "expandedReactionsText": "Show Less",
-  "reactionNotification": "Reacts to a message with $emoji$",
-  "otherSingular": "$number$ other",
-  "otherPlural": "$number$ others",
-  "reactionPopup": "reacted with",
+  "clearAllReactions": "آیا مطمئن هستید میخواید کل $emoji$ را پاک کنید؟",
+  "expandedReactionsText": "نمایش کمتر",
+  "reactionNotification": "به یک پیام با $emoji$ واکنش بده",
+  "otherSingular": "$number$ دیگر",
+  "otherPlural": "$number$ دیگران",
+  "reactionPopup": "واکنش داده با",
   "reactionPopupOne": "$name$",
-  "reactionPopupTwo": "$name$ & $name2$",
-  "reactionPopupThree": "$name$, $name2$ & $name3$",
-  "reactionPopupMany": "$name$, $name2$, $name3$ &",
-  "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
-  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message"
+  "reactionPopupTwo": "$name$ و $name2$",
+  "reactionPopupThree": "$name$، $name2$، و $name3$",
+  "reactionPopupMany": "$name$, $name2$, $name3$ و ",
+  "reactionListCountSingular": "و $otherSingular$ با <span>$emoji$</span> به این پیام واکنش داده است",
+  "reactionListCountPlural": "و $otherPlural$ با <span>$emoji$</span> به این پیام واکنش داده اند"
 }
